tests/should_fail/let_struct_too_many_fields.nv
module fail
// Let destructure: struct with too many fields
struct Point { x: Int, y: Int }
let Point { x, y, z } = Point(1, 2)
